--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
         uses: 'google-github-actions/upload-cloud-storage@v0'
         with:
           path: './index.html'
-          destination: 'gs://jordanbaileycrc/index.html'
+          destination: 'jordanbaileycrc/index.html'
 
 
 
