--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,12 +72,35 @@ jobs:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
 
-      - id: 'upload-file'
+      - id: 'upload-html'
         uses: 'google-github-actions/upload-cloud-storage@v0'
         with:
           path: './index.html'
           destination: 'jordanbaileycrc'
+      
+      - id: 'upload-css1'
+        uses: 'google-github-actions/upload-cloud-storage@v0'
+        with:
+          path: './reset-fonts-grids.css'
+          destination: 'jordanbaileycrc'
 
+      - id: 'upload-css2'
+        uses: 'google-github-actions/upload-cloud-storage@v0'
+        with:
+          path: './resume.css'
+          destination: 'jordanbaileycrc'
+
+      - id: 'upload-json'
+        uses: 'google-github-actions/upload-cloud-storage@v0'
+        with:
+          path: './apifetch_jbresume.js'
+          destination: 'jordanbaileycrc'
+
+      - id: 'upload-cors'
+        uses: 'google-github-actions/upload-cloud-storage@v0'
+        with:
+          path: './cors.json'
+          destination: 'jordanbaileycrc'
 
 
 #       - name: Setup Terraform
